--- a/public/index.html
+++ b/public/index.html
@@ -26,10 +26,10 @@
 
   <title>Sayna Superman React</title>
 
-      <!-- update the version number as needed -->
-      <script defer src="/__/firebase/10.5.0/firebase-app-compat.js"></script>
+      update the version number as needed
+      <!-- <script defer src="/__/firebase/10.5.0/firebase-app-compat.js"></script> -->
       <!-- include only the Firebase features as you need -->
-      <script defer src="/__/firebase/10.5.0/firebase-auth-compat.js"></script>
+      <!-- <script defer src="/__/firebase/10.5.0/firebase-auth-compat.js"></script>
       <script defer src="/__/firebase/10.5.0/firebase-database-compat.js"></script>
       <script defer src="/__/firebase/10.5.0/firebase-firestore-compat.js"></script>
       <script defer src="/__/firebase/10.5.0/firebase-functions-compat.js"></script>
@@ -37,13 +37,13 @@
       <script defer src="/__/firebase/10.5.0/firebase-storage-compat.js"></script>
       <script defer src="/__/firebase/10.5.0/firebase-analytics-compat.js"></script>
       <script defer src="/__/firebase/10.5.0/firebase-remote-config-compat.js"></script>
-      <script defer src="/__/firebase/10.5.0/firebase-performance-compat.js"></script>
+      <script defer src="/__/firebase/10.5.0/firebase-performance-compat.js"></script> -->
 
        <!-- 
       initialize the SDK after all desired features are loaded, set useEmulator to false
       to avoid connecting the SDK to running emulators.
     -->
-    <script defer src="/__/firebase/init.js?useEmulator=true"></script>
+    <!-- <script defer src="/__/firebase/init.js?useEmulator=true"></script> -->
 </head>
 
 <body>
