--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
 
   <title>Sayna Superman React</title>
 
-      update the version number as needed 1
+      <!-- update the version number as needed 1 -->
       <script defer src="/__/firebase/10.5.0/firebase-app-compat.js"></script>
       <!-- include only the Firebase features as you need -->
       <script defer src="/__/firebase/10.5.0/firebase-auth-compat.js"></script>
